2008-09-25  higepon  <higepon@users.sourceforge.jp>

        * lib/mosh/unicode.ss : Added char-whitespace?, char-alphabetic?, char-upper-case?,
                                      char-lower-case?, char-title-case?, char-numeric?
                                      and char-general-category.

        * unicode/make-other-lowercase-property-datum.scm (main): Added.

        * unicode/make-other-uppercase-property-datum.scm (main): Added.

        * unicode/make-whitespace-property-datum.scm (main): Added.

        * unicode/make-other-alphabetic-datum.scm: Added for parsing PropList.txt.

2008-09-24  higepon  <higepon@users.sourceforge.jp>

        * lib/mosh/unicode.ss : Added char-ci=?, char-ci>=?, char-ci<=?, char-ci<? and char-ci>?.

        * lib/mosh/unicode.ss : Added char-upcase, char-downcase, char-titlecase and char-foldcase.

2008-09-23  higepon  <higepon@users.sourceforge.jp>

        * Makefile.am (MAINTAINERCLEANFILES): Added for faster compilation.

        * scanner.re (scan): Added DECIMAL_10 to UREAL_10.

        * lib/srfi/8.ss (internal-srfi-8): Addes srfi-8 (receive ...).

        * lib/mosh/unicode.ss (mosh): Added char-upcase/char-downcase.

2008-09-22  higepon  <higepon@users.sourceforge.jp>

        * StringProcedures.cpp (stringTonumberEx): Added base argument support.

2008-09-18  higepon  <higepon@users.sourceforge.jp>

        * scanner.re (currentToken): Replaced (read) to newer one which use re2c. It is much faster than it was.

        * Scanner.h (scheme): Fixed a GC bug.
                              I forgot to set super class of Scanner to gc.

2008-09-16  higepon  <higepon@users.sourceforge.jp>

        * ScannerHelper.cpp : Added.

        * test/reader.scm: Added for testing reader.

2008-09-15  higepon  <higepon@users.sourceforge.jp>

        * scanner.re (class ScannerHelper): Added new scanner using re2c.

2008-09-13  higepon  <higepon@users.sourceforge.jp>

        * reader.lex (): Added read #\x41 style character.
