@@ -1,3 +1,7 @@
+2008-09-26  higepon  <higepon@users.sourceforge.jp>
+
+        * lib/mosh/unicode.ss (string-upcase): Added.
+
 2008-09-25  higepon  <higepon@users.sourceforge.jp>
 
         * lib/mosh/unicode.ss : Added char-whitespace?, char-alphabetic?, char-upper-case?,
